Fixed horizontal scrolling on small screens when links are long

--- a/frontend/src/sass/_embla.scss
+++ b/frontend/src/sass/_embla.scss
@@ -27,6 +27,7 @@
   
     a {
       color: var(--primary-color);
+      overflow-wrap: break-word;
     }
   }
 }
